# routes/authRoutes.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const router = express.Router();
-const { register, login } = require('../controllers/authController');
+const { register, login, googleLogin } = require('../controllers/authController');
 
 router.post('/register', register);
 router.post('/login', login);
+router.post('/google', googleLogin); 
 
 module.exports = router;
